# AutoLoginGuet

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  Readme.md  build.rs  config.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  loc.yml  release.yml
Bat脚本/: Py-取消开机自启-注册表.bat  Py-取消开机自启-计时任务(管理员).bat  Py-设置开机自启-注册表.bat  Py-设置开机自启-计时任务(管理员).bat  Rust-取消开机自启-注册表.bat  Rust-取消开机自启-计时任务(管理员).bat  Rust-设置开机自启-注册表.bat  Rust-设置开机自启-计时任务(管理员).bat
Python/: AutoLogin.pyw  requirements.txt
Rust/Auto_login/: Cargo.toml  build.rs
Rust/Auto_login/src/: main.rs
assets/: manifest.xml  style.css
docs/: API.md  LICENSE-ICONPARK.md
installer/: InnoSetup.iss  README.md
mini_script/: README.md
mini_script/unix/: autologin-guet.service  autostart_login_and_flow.sh  autostart_only-flow.sh  autostart_only-login.sh  com.autologin.guet.plist  login.sh  login_and_flow.sh  only-flow.sh  only-login.sh
mini_script/win/: AutoLogin.vbs  autostart.bat  autostart_login_and_flow.bat  autostart_only-flow.bat  autostart_only-login.bat  login.ps1  login_and_flow.ps1  only-flow.ps1  only-login.ps1
src/: lib.rs  main.rs
src/core/: config.rs  config_manager.rs  crypto.rs  dto.rs  error.rs  events.rs  flow.rs  logging.rs  message.rs  mod.rs  network.rs  notification.rs  service.rs
src/gui/: app.rs  components.rs  debug.rs  gui_event.rs  gui_service.rs  init.rs  mod.rs  state.rs  webview2_checker.rs
