[package]
name = "AutoLoginGUET"
version = "2.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.1", features = ["desktop"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt", "macros", "time", "sync"] }
reqwest = { version = "0.12.24", features = ["cookies"] }
chrono = "0.4.42"
urlencoding = "2.1.3"
notify-rust = "4.11.7"
toml = "0.9.8"
aes = "0.8.4"
cbc = "0.1.2"
rand = "0.9.2"
sha2 = "0.10.9"
base64 = "0.22.1"
thiserror = "2.0.17"
async-trait = "0.1.89"
lazy_static = "1.5.0"
winreg = "0.55.0"
win-msgbox = "0.2.1"
md5 = "0.8.0"
regex = "1.11.2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[[bin]]
name = "AutoLoginGUET"
path = "src/main.rs"

[lib]
name = "autologinguet_core"
path = "src/lib.rs"

[features]
gui = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
