[package]
name = "AutoLogin"
version = "0.9.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
reqwest = { version = "0.12.0", features = ["blocking", "json"] }
rusqlite = { version = "0.34.0", features = ["bundled"] }
sysinfo = "0.34.2"
notify-rust = "4.11.0"
serde = { version = "1.0.0", features = ["derive"] }
serde_yaml = "0.9.0"
rand = "0.8.5"

[package.metadata.winres]
OriginalFilename = "AutoLogin.exe"
ProductName = "DrAutoLogin"
FileDescription = "An automatic login tool for doctorcom networks."
LegalCopyright = "Copyright © 2025 ReRokutosei"

# 添加这个配置来隐藏控制台窗口
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[[bin]]
name = "AutoLogin"
path = "src/main.rs"
test = false
bench = false
doctest = false
doc = false
harness = false
required-features = []
edition = "2021"